RESOLVED FIXED175334
REGRESSION: 2 test262/test/language/statements/async-function failures
https://bugs.webkit.org/show_bug.cgi?id=175334
Summary REGRESSION: 2 test262/test/language/statements/async-function failures
Ryan Haddad
Reported 2017-08-08 11:34:45 PDT
test262.yaml/test262/test/language/statements/async-function/early-errors-no-async-generator.js.default: ERROR: Unexpected exit code: 3 test262.yaml/test262/test/language/statements/async-function/early-errors-no-async-generator.js.default-strict: ERROR: Unexpected exit code: 3 FAIL: test262.yaml/test262/test/language/statements/async-function/early-errors-no-async-generator.js.default-strict FAIL: test262.yaml/test262/test/language/statements/async-function/early-errors-no-async-generator.js.default https://build.webkit.org/builders/Apple%20El%20Capitan%20Release%20Test262%20%28Tests%29/builds/3197
Attachments
Patch (3.74 KB, patch)
2017-08-09 00:36 PDT, GSkachkov
no flags
Ryan Haddad
Comment 1 2017-08-08 11:49:42 PDT
These failures started after https://trac.webkit.org/r220323 landed.
GSkachkov
Comment 2 2017-08-08 12:10:31 PDT
Ohh, I did not expect that async function check that there is no async generator I'll provide patch
Yusuke Suzuki
Comment 3 2017-08-08 12:12:38 PDT
(In reply to GSkachkov from comment #2) > Ohh, I did not expect that async function check that there is no async > generator > I'll provide patch I think it's safe to make useAsyncIterator false until you finish async iterator work. In that case, you can specify @skip for async iterator JSTests for now. After your work is finished, you can set/remove useAsyncIterator flag. And you can specify :failDueToOutdatedOrBadTest in test262.yaml.
GSkachkov
Comment 4 2017-08-09 00:36:01 PDT
Created attachment 317688 [details] Patch Patch
Yusuke Suzuki
Comment 5 2017-08-09 00:45:19 PDT
Comment on attachment 317688 [details] Patch r=me
WebKit Commit Bot
Comment 6 2017-08-09 02:17:48 PDT
Comment on attachment 317688 [details] Patch Clearing flags on attachment: 317688 Committed r220449: <http://trac.webkit.org/changeset/220449>
WebKit Commit Bot
Comment 7 2017-08-09 02:17:49 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8 2017-08-09 02:19:11 PDT
Note You need to log in before you can comment on or make changes to this bug.